force-app/main/default/objects/Authentisign_Config__mdt/Authentisign_Config__mdt.object-meta.xml
<CustomObject>
    <label>Authentisign Config</label>
    <pluralLabel>Authentisign Configs</pluralLabel>
</CustomObject>