force-app/main/default/objects/Authentisign_Config__mdt/fields/BASE_URL__c.field-meta.xml
<CustomField>
    <fullName>BASE_URL__c</fullName>
    <label>Base URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>