force-app/main/default/objects/Authentisign_Config__mdt/fields/JWT_Token__c.field-meta.xml
<CustomField>
    <fullName>JWT_Token__c</fullName>
    <label>JWT Token</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>